--- a/app/globals.css
+++ b/app/globals.css
@@ -76,6 +76,7 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --font-sans: var(--font-geologica), ui-sans-serif, system-ui, sans-serif;
 }
 
 .dark {
@@ -111,10 +112,13 @@
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
 }
-
 @layer base {
   * {
     @apply border-border outline-ring/50;
+  }
+
+  html {
+    font-family: var(--font-sans);
   }
   body {
     @apply bg-background text-foreground;
